Dark mode and redeploy fix

--- a/assets/styles/global.scss
+++ b/assets/styles/global.scss
@@ -262,7 +262,7 @@
   .tag {
     // color:white !important;
     background-color: $black-ter !important;
-    span {
+    &:not(.is-outlined) span {
       color: white;
     }
   }
